# mcp_server

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
plugins/bacio-quote/: BacioQuote.cpp  CMakeLists.txt
plugins/code-review/: CMakeLists.txt  CodeReview.cpp
plugins/notification/: Notification.cpp
plugins/sleep/: CMakeLists.txt  Sleep.cpp
plugins/weather/: CMakeLists.txt  Weather.cpp
src/: main.cpp
src/interface/: ITransport.h  PluginAPI.h
src/loader/: PluginsLoader.cpp  PluginsLoader.h
src/server/: Server.cpp  Server.h
src/transport/: HttpStreamTransport.cpp  HttpStreamTransport.hpp  SseTransport.cpp  SseTransport.h  StdioTransport.cpp  StdioTransport.h
src/utils/: MCPBuilder.h  TSingleton.h
test/: configuration-httpstream.json  test-client-http.py  test-client.py
